--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -394,6 +394,20 @@ a, a:visited {
 	text-decoration: underline;
 }
 
+#nav-collect {
+}
+
+#nav-collect span.left-nav-icon {
+	width: 38px;
+	height: 38px;
+	background-image: url('/assets/img/icn-nav.png');
+	background-repeat: no-repeat;
+	display: block;
+	background-size: 38px;
+	background-position: 0px -38px;
+	margin: 0 auto;
+}
+
 .nav-dash {
 	background-position: 0 0;
 }
