--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -2203,9 +2203,26 @@ a strong {
 }
 
 #flow-injector-input {
-	width: 616px;
-	max-width: 616px;
-	height: 100px;
+	width: 100%;
+	height: 150px;
+	background: #575F74;
+	color: white;
+	margin-bottom: 5px;
+	font-family: inherit;
+	padding: 10px;
+	box-sizing: border-box;
+}
+
+#execute-explore-query {
+	margin: 10px;
+	float: right;
+}
+
+.bordered-dataset-table {
+}
+
+.bordered-dataset-table > td {
+	padding: 0;
 }
 
 textarea {
@@ -3452,6 +3469,96 @@ div.tooltip {
 
 .btn-group.start-stop-btns .btn.stop:hover {
 	background: white;
+}
+
+.btn-custom {
+	color: #4B88E7 !important;
+	letter-spacing: 0.1em;
+	line-height: 25px;
+	font-size: 14px !important;
+	border-radius: 5px;
+	background-image: -webkit-linear-gradient(top, white, #f5f5f5);
+	display: inline-block;
+	background: white;
+	border: 1px solid #CACBCF;
+	text-transform: none;
+	min-height: 35px;
+	padding-right: 10px;
+}
+
+#explore-button {
+	margin-top: 3px;
+	margin-right: 10px;
+	background-image: url('/assets/img/v2/explore_icon.png');
+	padding-left: 30px;
+	background-repeat: no-repeat;
+	background-position: 5px 5px;
+	line-height: 2.5;
+}
+
+#explore-button {
+	text-decoration: none;
+}
+
+#explore-button:hover {
+	text-decoration: none;
+}
+
+#explore-button:visited {
+	text-decoration: none;
+}
+
+#query-display {
+	background: #666666;
+	max-height: 600px;
+	overflow: auto;
+}
+
+#query-tables {
+	width: 350px;
+	background: white;
+}
+
+#query-schema {
+	margin-left: 350px;
+	color: white;
+}
+
+#schema-table th {
+	background: #535353;
+	color: white;
+}
+
+#schema-table th, #schema-table td {
+	border-color: #515151;
+}
+
+.table-name:hover {
+	color: white;
+	background: #1751A3;
+}
+
+.table-name:hover .app-list-name a {
+	color: white;
+}
+
+.table-name.selected {
+	color: white;
+	background: #1751A3;
+}
+
+.table-name.selected .app-list-name a {
+	color: white;
+}
+
+.arrow-right {
+	width: 0;
+	height: 0;
+	border-top: 8px solid transparent;
+	border-bottom: 8px solid transparent;
+	border-left: 8px solid white;
+	float: right;
+	margin-top: -20px;
 }
 
 /**
