--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -2203,10 +2203,17 @@ a strong {
 }
 
 #flow-injector-input {
+	width: 616px;
+	max-width: 616px;
+	height: 100px;
+}
+
+#query-injector-input {
 	width: 100%;
 	height: 150px;
 	background: #575F74;
 	color: white;
+	margin-top: 10px;
 	margin-bottom: 5px;
 	font-family: inherit;
 	padding: 10px;
