Change Flowlet's instances by more than 1, by using a textbox and submit button. (valid input: [1,100]).

--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -1634,7 +1634,10 @@ span.log-icon.complete {
   background-image: url('/assets/img/plus.png');
 }
 
-
+#instancesInput {
+   text-align:left;
+   height: 29px;
+}
 /*
  * Bootstrap Overrides
  */
