Minor changes upon meeting with Max: -Moved query/results links to the left. -Removed tooltip from Results Link (when submitting a near query). -Instead, submitting a query takes you to results page. -Remove execute button from results page (undone for now). -Results and status columns collapsed and moved to the left of query.

--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -3693,7 +3693,7 @@ div.tooltip-inner {
 	height: 32px;
 	background-image: url('/assets/img/v2/download_inactive.png');
 	background-repeat: no-repeat;
-	display: block;
+	display: inline-block;
 	margin: 0px auto;
 }
 
@@ -3705,15 +3705,15 @@ div.tooltip-inner {
 	height: 32px;
 	background-image: url('/assets/img/v2/na.png');
 	background-repeat: no-repeat;
-	display: block;
-	margin: 0px auto;
+	display: inline-block;
+  margin: 0px auto;
 }
 .download-query-results-disabled-btn {
 	width: 32px;
 	height: 32px;
 	background-image: url('/assets/img/v2/download_disabled.png');
 	background-repeat: no-repeat;
-	display: block;
+	display: inline-block;
 	margin: 0px auto;
 }
 
