Fixes the height of the view that displays the list of table to be based on viewport

--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -3575,20 +3575,18 @@ div.tooltip-inner {
 
 #query-display {
 	background: #666666;
-	max-height: 600px;
+	max-height: 50vh;
 	overflow: auto;
 }
 
 #query-tables {
 	width: 350px;
 	background: white;
-	min-height: 600px;
 }
 
 #query-schema {
 	margin-left: 350px;
 	color: white;
-	max-height: 600px;
 	overflow: auto;
 }
 
