--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -3756,3 +3756,35 @@ div.tooltip-inner {
 	width: 20px;
 	height: 20px
 }
+
+/**
+  * Loading icon styles
+  */
+
+.loading-icon {
+}
+
+.loading-icon.hide {
+  display: none;
+}
+
+.loading-icon .overlay-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #000;
+  opacity: .8;
+  filter: alpha(opacity=80);
+  z-index: 100;
+}
+
+.loading-icon .overlay-background img {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  border-radius: 10px;
+  transform: translate(-50%, -50%);
+}
+
