Improves the UI for dataset backed tables in the data-explore screen

--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -1420,7 +1420,7 @@ input[type="text"] {
 	color: #9698A5;
 	font-size: 12px;
 	height: 14px;
-	display: block;
+	/*display: block; */
 	overflow: hidden;
 	white-space: nowrap;
 }
