additional images and style changes for ui-2.4

--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -809,6 +809,10 @@ h1 span:first-child {
 	border-bottom: 1px solid #DEDEDE;
 }
 
+.panel .table.streams-table thead {
+	border-top: 0;
+}
+
 .panel-title, h2 {
 	font-size: 22px;
 	font-weight: 100;
