--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -1687,7 +1687,19 @@ span.log-icon.complete {
   background-image: url('/assets/img/plus.png');
 }
 
+#instancesInput {
+   text-align:left;
+   height: 29px;
+   width: 25px;
+   color: black;
+}
 
+.services-instances-input{
+  height: 29px ! important;
+  max-width: 50px ! important;
+  font-weight: bold ! important;
+  text-align: center ! important;
+}
 /*
  * Bootstrap Overrides
  */
@@ -3497,6 +3509,26 @@ div.tooltip {
     pointer-events: none;
 }
 
+div.tooltip-inner {
+    text-align: center;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 1000px;
+    margin-bottom: 6px;
+    background-color: #0000000;
+    font-size: 14px;
+}
+.popover {
+
+}
+.popover-title {
+    font-size: 15p;
+}
+.popover-content {
+    color: black;
+    font-size: 10p;
+}
+
 .flow-run-date {
     font-size: 12px;
     color: #77878B;
@@ -3699,6 +3731,7 @@ div.tooltip {
   width: 70%;
 }
 
+
 #query-display {
     background: #666666;
     max-height: 50vh;
@@ -3723,6 +3756,7 @@ div.tooltip {
 }
 #query-tables {
   width: 30%;
+  display: inline-flex;
     background: white;
   vertical-align: top;
   overflow: auto;
@@ -3734,7 +3768,6 @@ div.tooltip {
 }
 
 .query-schema {
-    margin-left: 350px;
     color: white;
     overflow: auto;
 }
@@ -3992,13 +4025,14 @@ div.tooltip {
 .query-results-table-entry > thead > tr > th {
     background: #6D6D6D;
     color: white;
+    border-bottom: 1px solid #787878;
 }
 
 .query-results-table-entry > tbody > tr > td {
     background: #888888;
     color: white;
-    border-right: 1px solid #929292;
-    border-bottom: 1px solid #929292;
+    border-right: 1px solid #787878;
+    border-bottom: 1px solid #787878;
 }
 
 .query-results-table-entry > tbody > tr > td:last-child {
