--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -899,16 +899,13 @@ h1 span:first-child {
     text-transform: uppercase;
     font-size: 12px;
 }
-.handlerinstances table th, .popup-container table th {
-    padding: 10px 20px;
-    text-transform: uppercase;
-    font-size: 12px;
-}
-.handlerinstances table th, .popup-container table th, .sparkline-box-title, .drop-zone, .app-list-count span, .sparkline-box-value span {
+.handlerinstances table th {
     border-top: 0;
     color: #5A5D6E;
     padding: 2px 4px;
+    text-transform: uppercase;
     font-weight: normal;
+    font-size: 12px;
     letter-spacing: 0.1em;
 }
 
