--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -4234,28 +4234,35 @@ div.tooltip-inner {
   * Loading icon styles
   */
 
+.loading-icon {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 3;
+}
+
 .loading-icon.hide {
   display: none;
 }
 
 .loading-icon .overlay-background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   background-color: #000;
   opacity: .8;
   filter: alpha(opacity=80);
   z-index: 100;
+  height: inherit;
 }
 
 .loading-icon .overlay-background img {
-  position: fixed;
+  position: relative;
   top: 50%;
-  left: 50%;
   border-radius: 10px;
   transform: translate(-50%, -50%);
+
+}
+
+.object-list-empty.dataexplore-nodataset {
+  position: relative;
 }
 
 #goto-btn {
