Fixes on hover behavior for results table in data explore screen

--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -4139,6 +4139,10 @@ div.tooltip-inner {
 }
 
 .query-table-entry:hover .lighter-color, .query-table-entry:hover .bolder-font {
+  color: white;
+}
+
+.query-table-entry.selected .lighter-color, .query-table-entry.selected .bolder-font {
     color: white;
 }
 .data-explore-results .results-table-holder {
