minor - class name change

--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -1677,7 +1677,7 @@ span.log-icon.complete {
 .instance-wrapper div {
     display: inline-block;
 }
-.inline-block {
+.instances-requested {
     display: inline-block;
 }
 
