Replaced instances of "Reactor" with "CDAP", and edited comments to match. Fixed one copyright. Added some github links to make it easier to find the remaining JIRAs.

--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -1625,7 +1625,7 @@ span.log-icon.complete {
 }
 
 /*
- * Reactor Services
+ * CDAP Services
  */
 #reactor-services #panels {
     padding-top: 40px;
