Fixes the behavior for running spark jobs to show a message that has link to logs view

--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -4279,3 +4279,9 @@ div.tooltip-inner {
 .panel-title.center-align.beta-info-font {
   font-size: 14px;
 }
+
+#panels .panel .panel-head .panel-title .logs-link {
+  cursor: pointer;
+  color: blue;
+  text-decoration: underline;
+}
