--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -4278,9 +4278,11 @@ div.tooltip-inner {
 
 .panel-title.center-align.beta-info-font {
   font-size: 14px;
+  padding: 13px;
+  line-height: inherit;
 }
 
-#panels .panel .panel-head .panel-title .logs-link {
+#panels .panel .panel-title .logs-link {
   cursor: pointer;
   color: blue;
   text-decoration: underline;
