--- a/cdap-web-app/client/assets/css/new/main.css
+++ b/cdap-web-app/client/assets/css/new/main.css
@@ -4340,3 +4340,15 @@ div.tooltip-inner {
   margin: 0px auto;
   display: block;
 }
+
+.panel-title.center-align.beta-info-font {
+  font-size: 14px;
+  padding: 13px;
+  line-height: inherit;
+}
+
+#panels .panel .panel-title .logs-link {
+  cursor: pointer;
+  color: blue;
+  text-decoration: underline;
+}
