Fix problem with CSS on license dependency pages. Create new PDFs with 2.5.2 in them. Correct the building of the license PDFs. Fix numerous errors and omissions, simplified the linkages of includes, et al.

--- a/cdap-docs/_common/_themes/cdap/static/basic.css
+++ b/cdap-docs/_common/_themes/cdap/static/basic.css
@@ -315,6 +315,7 @@ table.docutils {
     width: 100%;
     margin-left: 0%;
     margin-right: 0%;
+    background-color: white;
 }
 
 table.docutils td, table.docutils th {
