rm unused gotham-black

--- a/app/styles/variables.less
+++ b/app/styles/variables.less
@@ -13,3 +13,7 @@
 @link-hover-color:      darken(@link-color, 15%);
 
 @img-path:              "../img/";
+
+@font-family-sans-serif:  Gotham, Helvetica, Arial, sans-serif;
+@font-size-base:          12px;
+@headings-font-weight:    bold;
