--- a/app/styles/common.less
+++ b/app/styles/common.less
@@ -1,26 +1,6 @@
+@import "./fonts.less";
 @import "./variables.less";
 @import "../../bower_components/bootstrap/less/mixins.less";
-
-@font-face {
-    font-family: "Gotham";
-    src: url("../fonts/gotham-light.eot");
-    src: url("../fonts/gotham-light.eot") format("embedded-opentype"),
-         url("../fonts/gotham-light.woff2") format("woff2"),
-         url("../fonts/gotham-light.woff") format("woff"),
-         url("../fonts/gotham-light.ttf") format("truetype"),
-         url("../fonts/gotham-light.svg#GothamLight") format("svg");
-}
-
-@font-face {
-    font-family: "Gotham";
-    font-weight: bold;
-    src: url("../fonts/gotham-medium.eot");
-    src: url("../fonts/gotham-medium.eot") format("embedded-opentype"),
-         url("../fonts/gotham-medium.woff2") format("woff2"),
-         url("../fonts/gotham-medium.woff") format("woff"),
-         url("../fonts/gotham-medium.ttf") format("truetype"),
-         url("../fonts/gotham-medium.svg#GothamMedium") format("svg");
-}
 
 
 html {
